--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+2.0+cs.4 (unreleased)
+---------------------
+
+- Nothing changed yet.
+
+
 2.0+cs.3 (2021-07-21)
 ---------------------
 
