--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,22 @@ Changelog
 2.0+cs.4 (unreleased)
 ---------------------
 
-- Nothing changed yet.
+- error control [Mikel Larreategi <mlarreategi@codesyntax.com>]
+
+-  [Mikel Larreategi <mlarreategi@codesyntax.com>]
+
+- [ci skip] [Mikel Larreategi <mlarreategi@codesyntax.com>]
+
+- Preparing release 2.0+cs.3 [Mikel Larreategi <mlarreategi@codesyntax.com>]
+
+-  [Mikel Larreategi <mlarreategi@codesyntax.com>]
+
+- [ci skip] [Mikel Larreategi <mlarreategi@codesyntax.com>]
+
+- Update changelog [Mikel Larreategi <mlarreategi@codesyntax.com>]
+
+- add conditions when showing the last used date [Mikel Larreategi <mlarreategi@codesyntax.com>]
+
 
 
 2.0+cs.3 (2021-07-21)
