--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+2.0+cs.6 (unreleased)
+---------------------
+
+- Nothing changed yet.
+
+
 2.0+cs.5 (2021-12-11)
 ---------------------
 
