--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+2.0+cs.8 (unreleased)
+---------------------
+
+- Nothing changed yet.
+
+
 2.0+cs.7 (2023-03-05)
 ---------------------
 
