--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,12 @@ Changelog
 2.0+cs.8 (unreleased)
 ---------------------
 
-- Nothing changed yet.
+- newer pyjwt requires to be explicit about algorithms [Mikel Larreategi <mlarreategi@codesyntax.com>]
+
+-  [Mikel Larreategi <mlarreategi@codesyntax.com>]
+
+- [ci skip] [Mikel Larreategi <mlarreategi@codesyntax.com>]
+
 
 
 2.0+cs.7 (2023-03-05)
